# aipass

./: .gitignore  .kiro-plan-extension-polish.md  .kiro-plan-unlock-strategy.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  agents.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  wrangler.toml
.agents/: 01-research.md  02-requirements.md  03-ui-design.md  04-architecture.md  05-development-plan.md  06-roadmap.md  07-security-e2ee-model.md  08-implementation-status.md  README.md
.codex/skills/aipass-repo-guardrails/: SKILL.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.svelte  main.ts  styles.scss
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: auth_tasks.rs  commands.rs  lib.rs  main.rs  models.rs  singleton.rs  tray.rs  tray_swift.rs  updates.rs
apps/desktop/src-tauri/swift-tray/: Package.swift
apps/desktop/src-tauri/swift-tray/Sources/AipassTray/: DesignTokens.swift  TrayBridge.swift  TrayPanelController.swift  TrayPanelView.swift  TrayStatus.swift
apps/desktop/src-tauri/swift-tray/Sources/TrayPreview/: main.swift
apps/desktop/src-tauri/windows/: nsis-hooks.nsh
apps/desktop/src/lib/: types.ts
apps/desktop/src/lib/components/auth/: AuthScreen.svelte  HeroBackground.svelte  PasswordField.svelte  PasswordStrengthMeter.svelte  RecoveryKitModal.svelte  UnlockTransition.svelte
apps/desktop/src/lib/components/integration/: IntegrationCard.svelte  IntegrationPreviewDialog.svelte  IntegrationPreviewDialog.test.ts
apps/desktop/src/lib/components/layout/: Sidebar.svelte
apps/desktop/src/lib/components/pricing/: PricingGroupDialog.svelte
apps/desktop/src/lib/components/providers/: ProviderDetailPane.svelte  ProviderFormFields.svelte  ProviderListPane.svelte  ProviderModal.svelte  ProviderUsageProbeDialog.svelte
apps/desktop/src/lib/components/server/: RouteGroupDialog.svelte  RouteListPane.svelte  ServerDetailPane.svelte  UsageChart.svelte
apps/desktop/src/lib/components/settings/: SettingsPanel.svelte
apps/desktop/src/lib/components/shared/: AppTitleBar.svelte  Badge.svelte  Banner.svelte  Brand.svelte  Button.svelte  Card.svelte  Logo.svelte  ProviderIcon.svelte  SecretField.svelte  SegmentedControl.svelte  SelectField.svelte  SwitchField.svelte  SyncStatusPill.svelte
apps/desktop/src/lib/services/: updates.ts
apps/desktop/src/lib/stores/: appearance.ts  i18n.ts
apps/desktop/src/lib/utils/: auth.ts  format.ts  highlight.ts  integrations.ts  providers.ts  server.test.ts  server.ts  usageProbe.ts
apps/extension/: package.json  popup.html  tsconfig.node.json  vite.config.ts
apps/extension/public/: manifest.json
apps/extension/src/: chrome.d.ts  entry-site-url.test.ts  entry-site-url.ts  native-client.test.ts  native-client.ts  provider-endpoint.test.ts  provider-endpoint.ts  service-worker.test.ts  service-worker.ts
apps/extension/src/content/: clipboard-bridge.test.ts  clipboard-bridge.ts  detector.test.ts  detector.ts  secret-scanner.ts
apps/extension/src/popup/: DetectedDraftBatch.svelte  Popup.svelte  index.html  main.ts  popup.scss  types.ts
crates/aipass-agent/: Cargo.toml
crates/aipass-agent-protocol/: Cargo.toml
crates/aipass-agent-protocol/src/: lib.rs
crates/aipass-agent/src/: autostart.rs  client.rs  desktop.rs  device_secrets.rs  handlers.rs  ipc.rs  launcher.rs  lib.rs  list_prices.json  logging.rs  main.rs  paths.rs  pricing.rs  proxy_service.rs  server.rs  session.rs  windows_service.rs
crates/aipass-agent/src/usage_probe/: errors.rs  http.rs  mod.rs  new_api.rs  sub_api.rs  urls.rs  values.rs
crates/aipass-cli/: Cargo.toml
crates/aipass-cli/src/: dispatch.rs  main.rs
crates/aipass-config-writers/: Cargo.toml
crates/aipass-config-writers/src/: backup.rs  detect.rs  lib.rs  models.rs  plan.rs  utils.rs
crates/aipass-crypto/: Cargo.toml
crates/aipass-crypto/src/: lib.rs
crates/aipass-native-host/: Cargo.toml
crates/aipass-native-host/src/: config.rs  lib.rs  main.rs  manifest.rs  preview.rs  protocol.rs  request.rs  settings.rs
crates/aipass-provider-registry/: Cargo.toml
crates/aipass-provider-registry/src/: lib.rs
crates/aipass-proxy/: Cargo.toml
crates/aipass-proxy-conversion/: Cargo.toml
crates/aipass-proxy-conversion/src/: lib.rs
crates/aipass-proxy/src/: lib.rs
crates/aipass-storage/: Cargo.toml
crates/aipass-storage/src/: lib.rs
crates/aipass-sync/: Cargo.toml
crates/aipass-sync/src/: lib.rs  local.rs  webdav.rs
crates/aipass-vault/: Cargo.toml
crates/aipass-vault/src/: lib.rs
scripts/: build-desktop-sidecars.mjs  install-native-host.mjs  license-audit.mjs  package-extension.mjs  prepare-macos-release-artifacts.mjs  prepare-tauri-macos-release-config.mjs  register-desktop-dev.mjs  release-metadata.mjs
