[package]
name = "aipass-agent-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aipass-config-writers = { path = "../aipass-config-writers" }
aipass-proxy = { path = "../aipass-proxy" }
aipass-provider-registry = { path = "../aipass-provider-registry" }
aipass-sync = { path = "../aipass-sync" }
aipass-vault = { path = "../aipass-vault" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
zeroize.workspace = true
