[package]
name = "aipass-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aipass-proxy-conversion = { path = "../aipass-proxy-conversion" }
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
