[package]
name = "aipass-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aipass-crypto = { path = "../aipass-crypto" }
aipass-provider-registry = { path = "../aipass-provider-registry" }
aipass-storage = { path = "../aipass-storage" }
anyhow.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
