[package]
name = "aipass-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "aipass_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aipass-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
aipass-crypto = { path = "../../../crates/aipass-crypto" }
aipass-provider-registry = { path = "../../../crates/aipass-provider-registry" }
aipass-sync = { path = "../../../crates/aipass-sync" }
aipass-vault = { path = "../../../crates/aipass-vault" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.2", features = [] }
time.workspace = true
uuid.workspace = true
