[package]
name = "aipass-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "aipass_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aipass-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
aipass-agent = { path = "../../../crates/aipass-agent" }
aipass-agent-protocol = { path = "../../../crates/aipass-agent-protocol" }
aipass-config-writers = { path = "../../../crates/aipass-config-writers" }
aipass-crypto = { path = "../../../crates/aipass-crypto" }
aipass-native-host = { path = "../../../crates/aipass-native-host" }
aipass-provider-registry = { path = "../../../crates/aipass-provider-registry" }
aipass-storage = { path = "../../../crates/aipass-storage" }
aipass-sync = { path = "../../../crates/aipass-sync" }
aipass-vault = { path = "../../../crates/aipass-vault" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.2", features = ["macos-private-api"] }
time.workspace = true
uuid.workspace = true
