[package]
name = "aipass-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "aipass_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aipass-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
aipass-agent = { path = "../../../crates/aipass-agent" }
aipass-agent-protocol = { path = "../../../crates/aipass-agent-protocol" }
aipass-config-writers = { path = "../../../crates/aipass-config-writers" }
aipass-crypto = { path = "../../../crates/aipass-crypto" }
aipass-native-host = { path = "../../../crates/aipass-native-host" }
aipass-provider-registry = { path = "../../../crates/aipass-provider-registry" }
aipass-storage = { path = "../../../crates/aipass-storage" }
aipass-sync = { path = "../../../crates/aipass-sync" }
aipass-vault = { path = "../../../crates/aipass-vault" }
anyhow.workspace = true
directories.workspace = true
interprocess.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.2", features = ["image-png", "macos-private-api", "tray-icon"] }
tauri-plugin-updater = "2"
time.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "objc2-quartz-core", "NSColor", "NSView", "NSWindow"] }
objc2-quartz-core = { version = "0.3", default-features = false, features = ["std", "objc2-core-foundation", "CALayer"] }
